<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Name</string>
    <string name="button_send">Sign In</string>
    <string name="button_main">Main Menu</string>
<<<<<<< HEAD
    <string name="button_help">Help</string>
=======
    <string name="button_help">TrafficCamMaps</string>
>>>>>>> 8233f16e53f6745783b495927f11fc1c6386edd3
    <string name="button_new">Traffic Cams</string>
    <string name="button_MoviesList">Movies List</string>
    <string name="title_activity_movie_model">MovieModel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="image_movie">movie image</string>
    <string name="Image_trafficcam">Traffic Cam</string>
    <string name="edit_username">username</string>
    <string name="edit_email">email</string>
    <string name="edit_password">password</string>
<<<<<<< HEAD
    <string name="name">name</string>
    <string name="details">details</string>
    <string name="username">username</string>
    <string name="enter_name">enter_name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Traffic_Camera">Traffic Cams</string>
    <string name="TrafficCamMap">Traffic Cam Map</string>
=======
>>>>>>> 8233f16e53f6745783b495927f11fc1c6386edd3
</resources>